--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <meta
       name="description"
@@ -33,9 +33,13 @@ const { title } = Astro.props;
       white 60%
     );
   }
+  @media (prefers-color-scheme: dark) {
+    html {
+      background-color: #1b1b1b;
+    }
+  }
   html {
     font-family: system-ui, sans-serif;
-    background-color: #f6f6f6;
   }
   code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
